--- a/exercise1/TipCalculator/StandardTipPage.xaml
+++ b/exercise1/TipCalculator/StandardTipPage.xaml
@@ -3,20 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TipCalculator.StandardTipPage"
              Title="Standard Tip">
-    <Grid x:Name ="LayoutRoot" BackgroundColor="Silver" Padding="10"
+	<ContentPage.Resources>
+		<Color x:Key="bgColor">Silver</Color>
+		<Color x:Key="fgColor">Navy</Color>
+		<x:Double x:Key="fontSize">22</x:Double>
+	</ContentPage.Resources>
+
+	<Grid x:Name ="LayoutRoot" BackgroundColor="{StaticResource bgColor}" Padding="10"
           ColumnDefinitions="*, 3*"
           RowDefinitions="Auto, Auto, Auto, Auto, *">
 
 
         <!-- Left column = static labels -->
-        <Label x:Name="billLabel"  Text="Bill"  TextColor="Navy" FontSize="22" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" />
-        <Label x:Name="tipLabel"   Text="Tip"   TextColor="Navy" FontSize="22" FontAttributes="Bold" Grid.Row="1" Grid.Column="0" />
-        <Label x:Name="totalLabel" Text="Total" TextColor="Navy" FontSize="22" FontAttributes="Bold" Grid.Row="2" Grid.Column="0" />
+        <Label x:Name="billLabel"  Text="Bill"  TextColor="{StaticResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" />
+		<Label x:Name="tipLabel"   Text="Tip"   TextColor="{StaticResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="1" Grid.Column="0" />
+		<Label x:Name="totalLabel" Text="Total" TextColor="{StaticResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="2" Grid.Column="0" />
 
         <!-- Right column = user input and calculated-value output -->
         <Entry x:Name="billInput"   Placeholder="Enter Amount" Keyboard="Numeric" TextColor="Gray" Grid.Row="0" Grid.Column="1" />
-        <Label x:Name="tipOutput"   Text="0.00" TextColor="Navy" FontSize="22"   Grid.Row="1" Grid.Column="1" />
-        <Label x:Name="totalOutput" Text="0.00" TextColor="Navy" FontSize="22"   Grid.Row="2" Grid.Column="1" />
+		<Label x:Name="tipOutput"   Text="0.00" TextColor="{StaticResource fgColor}" FontSize="{StaticResource fontSize}"   Grid.Row="1" Grid.Column="1" />
+		<Label x:Name="totalOutput" Text="0.00" TextColor="{StaticResource fgColor}" FontSize="{StaticResource fontSize}"   Grid.Row="2" Grid.Column="1" />
 
         <!-- Navigate to advanced-view page -->
         <Button Text="Use Custom Calculator" Clicked="GotoCustom" TextColor="White" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" />
