--- a/exercise1/TipCalculator/App.xaml
+++ b/exercise1/TipCalculator/App.xaml
@@ -4,11 +4,23 @@
              xmlns:local="clr-namespace:TipCalculator"
              x:Class="TipCalculator.App">
     <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="Resources/Colors.xaml" />
+				<ResourceDictionary Source="Resources/Styles.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+
+			<Color x:Key="bgColor">Silver</Color>
+			<Color x:Key="fgColor">Navy</Color>
+			<x:Double x:Key="fontSize">22</x:Double>
+
+			<Style x:Key="baseLabelStyle" TargetType="Label">
+				<Setter Property="FontSize" Value="{StaticResource fontSize}" />
+			</Style>
+
+			<Style x:Key="infoLabelStyle" TargetType="Label" BasedOn="{StaticResource baseLabelStyle}">
+				<Setter Property="FontAttributes" Value="Bold" />
+			</Style>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
